1999-05-08  Alex Roberts  <bse@gedit.pn.org>

	* Makefile.am:
	  makeconfig.pl:
	  help/C/topic.dat:
	  help/C/index.html: Added help file
	
	* src/gE_plugin_api.c: Replaced all the calls to g_hash_table_lookup
	  with straight gE_document_current() calls. Plugins seem to be 
	  working fine now.
	
	* src/commands.c: (doc_insert_text_cb) Commented out the GnomeMDI CHild
	  stuff, I have no idea why it doesn't work. Maybe some GnomeMDI guru
	  could look at it.. :)
	  (file_open_ok_sel) Ok, it works properly now.. It was dereferenceing
	  the filename (iirc). It's working fine now..

1999-04-30  Alex Roberts  <bse@gedit.pn.org>

	* commands.c: (file_open_ok_sel) Setting the filename selected in 
	  the File Selector to "" was a bad idea. Trying to save the file,
	  the filename of the doc itself was being corrupted. I've now 
	  removed this and it works fine.
	
	* gE_mdi.c: Moved the gE_document hash table initialisation to the
	  document class initialiser function.
	  Fixed up the context menu, and re-implemented the "Open .c/.h file"
	  option.

	* gE_document.h: Made the doc_swaphc_cb function an extern so gE_mdi.c
	  can use it for the context menu
	  
	* Some other minor bug fixes/code cleanups

1999-04-23  Martijn van Beers  <martijn@earthling.net>
	* commands.c:
	* gE_prefs_box.c: removed some commented stuff
	* main.h:
	* gE_document.c: removed gE_search stuff
	* gE_mdi.c: Changed menu callback code for new search
	            use gE_documents list again
	* search.[ch]: almost completely reimplemented. Now does backwards
	  searching, separated gui code and functionality.

1999-04-12  Kjartan Maraas  <kmaraas@online.no>

	* gE_prefs_box.c: (plugins_page_new) marked a string for translation.
	  
1999-04-10 (16:06) Alex Roberts  <bse@gedit.pn.org>

	* gE_document.c: (gE_window_new) Ok, i got it wrong, we should be
	  using the `plugins' GList.
	
	* gE_plugin_api.c: (gE_plugin_program_register) Ok, nobody ever told