@@ -1,5 +1,10 @@
 1999-05-08  Alex Roberts  <bse@gedit.pn.org>
 
+	* src/commands.c: (file_open_ok_sel) AT LAST! IT WORKS! set the filename
+	  of the *osel to "". Everything is peachy now (i hope ;)
+
+1999-05-08  Alex Roberts  <bse@gedit.pn.org>
+
 	* Makefile.am:
 	  makeconfig.pl:
 	  help/C/topic.dat:
